--- a/viikko3/login-robot/report.html
+++ b/viikko3/login-robot/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15],[[4,5,6,0,[],[1,8,7],[],[[7,0,0,[],[1,11,1],[]],[8,0,0,[],[1,12,1],[]],[9,0,0,[],[1,13,2],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,49],[[4,5,6,0,[],[1,17,13],[],[[7,0,0,[],[1,22,3],[]],[8,0,0,[],[1,25,2],[]],[9,0,0,[],[1,28,2],[]]],[],[3,3,0,0]],[10,11,12,0,[],[1,31,17],[],[[13,0,0,[],[1,33,2],[]],[14,0,0,[],[1,35,3],[]],[15,0,0,[],[1,38,2],[]],[16,0,0,[],[1,41,2],[]],[17,0,0,[],[1,43,2],[]],[18,0,0,[],[1,46,2],[]]],[],[6,6,0,0]]],[],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/login-robot/src/tests","*src/tests","*Login","*/home/koskijou/ohtu-palautus/viikko3/login-robot/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/login-robot/src/tests","*src/tests","*Login","*/home/koskijou/ohtu-palautus/viikko3/login-robot/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*Register","*/home/koskijou/ohtu-palautus/viikko3/login-robot/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Already Taken Username And Valid Password","*Register With Too Short Username And Valid Password","*Register With Enough Long But Invalid Username And Valid Password","*Register With Valid Username And Too Short Password","*Register With Valid Username And Long Enough Password Containing Only Letters"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"Tests.Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699879207226;
+window.output["baseMillis"] = 1699963825242;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17;
+window.output["generated"] = 55;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
