--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29280],[[4,5,6,0,[],[1,16,10299],[],[[7,0,0,[],[1,3554,2759],[]],[9,0,0,[],[1,6314,2652],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,10317,18960],[],[[12,0,0,[],[1,13189,6878],[]],[13,0,0,[],[1,20068,7837],[]]],[],[2,2,0,0]]],[],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,36463],[[4,5,6,0,[],[1,16,9716],[],[[7,0,0,[],[1,2969,2751],[]],[9,0,0,[],[1,5722,2659],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,9734,26726],[],[[12,0,0,[],[1,12684,6927],[]],[13,0,0,[],[1,19612,7813],[]],[14,0,0,[],[1,27426,7798],[]]],[],[3,3,0,0]]],[],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests","*src/tests","*Home","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests","*src/tests","*Home","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:27","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700038561169;
+window.output["baseMillis"] = 1700039222294;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29294;
+window.output["generated"] = 36476;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
