--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12882],[[4,5,6,0,[],[1,17,4285],[],[[7,0,0,[],[1,2605,279],[]],[9,0,0,[],[1,2885,88],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,4304,4359],[],[[13,0,0,[],[1,6564,467],[]],[14,0,0,[],[1,7032,202],[]],[15,0,0,[],[1,7235,194],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,8665,4216],[],[[18,0,0,[],[1,10921,496],[]],[19,0,0,[],[1,11417,196],[]],[20,0,0,[],[1,11614,218],[]],[21,0,0,[],[1,11832,205],[]]],[],[4,4,0,0]]],[],[],[9,9,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,13609],[[4,5,6,0,[],[1,17,4359],[],[[7,0,0,[],[1,2726,229],[]],[9,0,0,[],[1,2956,88],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,4377,4288],[],[[13,0,0,[],[1,6731,468],[]],[14,0,0,[],[1,7200,149],[]],[15,0,0,[],[1,7350,173],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,8666,4940],[],[[18,0,0,[],[1,11210,378],[]],[19,0,0,[],[1,11589,230],[]],[20,0,0,[],[1,11819,211],[]],[21,0,0,[],[1,12030,194],[]],[22,0,0,[],[1,12224,316],[]],[23,0,0,[],[1,12541,335],[]]],[],[6,6,0,0]]],[],[],[11,11,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests","*src/tests","*Home","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests","*src/tests","*Home","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/home/koskijou/ohtu-palautus/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation","*Login After Successful Registration","*Login After Failed Registration"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":11,"skip":0}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":11,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:04","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700042104666;
+window.output["baseMillis"] = 1700057548298;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12898;
+window.output["generated"] = 13632;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
